[Curl] Fix compilation error in WebFrameNetworkingContext https://bugs.webkit.org/show_bug.cgi?id=181312

Reviewed by Alex Christensen.

* WebProcess/WebCoreSupport/curl/WebFrameNetworkingContext.cpp:
(WebKit::WebFrameNetworkingContext::ensureWebsiteDataStoreSession):


Canonical link: https://commits.webkit.org/197150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226433 268f45cc-cd09-0410-ab3c-d52691b4dbfc